--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "browser-sync": "^2.12.3",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0"
+  },
+  "engines": {
+    "node": "v6.0.0"
   }
 }
