--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nf start"
+    "start": "nf start",
+    "postinstall": "gulp prod"
 }
   },
   "author": "Adil Dostmohamed",
