--- a/package.json
+++ b/package.json
@@ -11,22 +11,31 @@
   "author": "Adil Dostmohamed",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "bootstrap-sass": "^3.3.6",
     "browser-sync": "^2.12.10",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.4.1",
+    "eonasdan-bootstrap-datetimepicker": "^4.15.35",
     "express": "^4.13.4",
+    "express-session": "^1.14.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0",
     "jquery": "^2.2.2",
+    "jquery-validation": "^1.15.1",
     "method-override": "^2.3.5",
     "moment": "^2.13.0",
-    "mongoose": "^4.4.10"
+    "mongoose": "^4.4.10",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.12.3",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0"
+    "gulp-sass": "^2.2.0",
+    "morgan": "^1.7.0"
   },
   "engines": {
     "node": "v5.8.0"
