--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "moment": "^2.13.0",
     "mongoose": "^4.4.10",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "waypoints": "^4.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.12.3",
